<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="410dp">

    <TextView
        android:id="@+id/details_name_of_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="NameOfCripto"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/details_imageViewMyCoin"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/details_imageViewMyCoin"
        android:layout_width="57dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/current_price"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/details_current_price"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/details_current_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/_10_days_ago"
        android:textColor="?attr/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/details_before_7days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="356dp"
        android:layout_height="168dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:background="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- total investment -->
    <TextView
        android:id="@+id/teeext_veieieieiei"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/total_investments"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/details_total_investment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/details_total_investment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/euro_simbol"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />
    <!-- total amounts -->
    <TextView
        android:id="@+id/teeext_veieieieiei1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/total_amount"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/details_total_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei" />

    <TextView
        android:id="@+id/details_total_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/textView123"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei" />

    <TextView
        android:id="@+id/textView123"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/coins"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei" />
    <!-- total price -->
    <TextView
        android:id="@+id/teeext_veieieieiei12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/timex_price_spaces"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/details_current_price_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei1" />

    <TextView
        android:id="@+id/details_current_price_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/textView1233"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei1" />

    <TextView
        android:id="@+id/textView1233"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/euros_symbol_per_coin"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei1" />

    <View
        android:id="@+id/view23"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="3dp"
        android:background="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teeext_veieieieiei1213"
        app:layout_constraintTop_toBottomOf="@+id/textView1233" />
    <!-- curent capital -->
    <TextView
        android:id="@+id/teeext_veieieieiei121"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_current_capital"
        android:textAlignment="textStart"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/details_current_capital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei12" />

    <TextView
        android:id="@+id/details_current_capital"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/textView12334"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei12" />

    <TextView
        android:id="@+id/textView12334"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/euro_simbol"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei12" />

    <!-- curent result -->
    <TextView
        android:id="@+id/teeext_veieieieiei1213"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/profit"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/details_curent_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei121" />

    <TextView
        android:id="@+id/details_curent_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teeext_veieieieiei121" />

    <View
        android:id="@+id/view21"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="125dp"
        android:background="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <ImageButton
        android:id="@+id/details_more_details"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_more_detalis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>